--- a/src/main/resources/public/template/board/boardArticlesEdit.html
+++ b/src/main/resources/public/template/board/boardArticlesEdit.html
@@ -8,16 +8,16 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-edit flex-column scroll-wrap">
-        <div class="header">
-            <div class="page-title">
+    <div class="flex-column edit">
+        <div class="board-header">
+            <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{board.label.board}"></h1>
-                <h6 class="title-description" th:text="#{board.msg.editDescription}"></h6>
+                <h6 class="description" th:text="#{board.msg.editDescription}"></h6>
             </div>
         </div>
-        <div class="edit">
+        <div class="board-content-edit">
             <form id="boardForm" method="post" onsubmit="return false">
-                <div class="form-set">
+                <div class="flex-column edit-row">
                     <label class="required" th:text="#{board.label.board}" for="boardAdminId" />
                     <select id="boardAdminId" name="boardAdminId">
                         <option th:each="boardAdmin: ${boardAdminList}" th:value="${boardAdmin.boardAdminId}"
@@ -25,7 +25,7 @@
                                 th:selected="${boardAdmin.boardAdminId} == ${boardAdminInfo?.boardAdminId}"></option>
                     </select>
                 </div>
-                <div class="form-set" id="divCategoryYn" name="divCategoryYn">
+                <div class="flex-column edit-row" id="divCategoryYn" name="divCategoryYn">
                     <label class="required" th:text="#{board.label.category}" for="boardCategory" />
                     <select id="boardCategory" name="boardCategory">
                         <option th:each="boardCategory: ${boardCategoryInfo}" th:value="${boardCategory.boardCategoryId}"
@@ -34,50 +34,56 @@
                         </option>
                     </select>
                 </div>
-                <div class="form-set">
+                <div class="flex-column edit-row">
                     <label class="required" th:text="#{board.label.title}" for="boardTitle"/>
                     <input type="text" id="boardTitle" maxlength="100" th:value="${boardInfo?.boardTitle}">
                 </div>
-                <div class="form-set">
+                <div class="flex-column edit-row">
                     <label th:text="#{common.label.contents}" for="boardContents"/>
                     <div class="text-editor" id="boardContents"></div>
                 </div>
-                <div class="form-set file-uploader-edit" id="divFile" name="divFile">
+                <div class="flex-column edit-row file-uploader-edit" id="divFile" name="divFile">
                     <label class="file-uploader-title" th:text="#{common.label.attachFile}"/>
                     <div id="dropZoneFiles"></div>
                     <div id="dropZoneUploadedFiles"></div>
                 </div>
-                <div id="boardUserInfo">
-                    <div class="form-set">
-                        <label th:text="#{common.label.writer}"/>
-                        <input id="spanCreateUserKey" name="spanCreateUserKey" type="text" disabled
-                               th:value="${boardInfo?.createUser} ? ${boardInfo.createUser.userName} : ''"/>
+                <div id="boardUserInfo" class="flex-column edit-row">
+                    <div class="flex-row">
+                        <div class="flex-column col-6 mr-4">
+                            <label th:text="#{common.label.writer}"/>
+                            <input type="text" id="spanCreateUserKey" name="spanCreateUserKey" disabled
+                                   th:value="${boardInfo?.createUser} ? ${boardInfo.createUser.userName} : ''"/>
+                        </div>
                     </div>
-                    <div class="form-set">
-                        <label th:text="#{common.label.createDate}"/>
-                        <input id="spanCreateDt" name="spanCreateDt" type="text" disabled
-                               th:value="${boardInfo?.createDt} ? ${boardInfo.createDt} : ''"/>
+                    <div class="flex-row">
+                        <div class="flex-column col-6">
+                            <label th:text="#{common.label.createDate}"/>
+                            <input type="text" id="spanCreateDt" name="spanCreateDt" disabled
+                                   th:value="${boardInfo?.createDt} ? ${boardInfo.createDt} : ''"/>
+                        </div>
                     </div>
                 </div>
-                <div class="btn-list">
-                    <button class="point-fill" sec:authorize="hasAuthority('board.create')"
-                            th:if="${boardInfo?.boardId} and ${boardAdminInfo.replyYn} and ${replyYn}"
-                            onclick="saveBoard('post', 'reply')"
-                            th:text="#{board.btn.reply}">
-                    </button>
-                    <button class="point-fill" sec:authorize="hasAuthority('board.update')"
-                            th:if="${#authentication.details.userKey} == (${boardInfo?.createUser} ? ${boardInfo.createUser.userKey} : '')
+                <div class="flex-row justify-content-end edit-row">
+                    <div class="btn-list">
+                        <button class="point-fill" sec:authorize="hasAuthority('board.create')"
+                                th:if="${boardInfo?.boardId} and ${boardAdminInfo.replyYn} and ${replyYn}"
+                                onclick="saveBoard('post', 'reply')"
+                                th:text="#{board.btn.reply}">
+                        </button>
+                        <button class="point-fill" sec:authorize="hasAuthority('board.update')"
+                                th:if="${#authentication.details.userKey} == (${boardInfo?.createUser} ? ${boardInfo.createUser.userKey} : '')
                                and ${boardInfo?.boardId} and ${replyYn} == false"
-                            onclick ="saveBoard('put', 'normal')"
-                            th:text="#{common.btn.modify}">
-                    </button>
-                    <button class="point-fill" sec:authorize="hasAuthority('board.create')"
-                            th:if="(!${boardInfo?.boardId} and ${replyYn} == false)"
-                            onclick="saveBoard('post', 'normal')"
-                            th:text="#{common.btn.register}">
-                    </button>
-                    <a class="btn default-line"
-                       th:href="@{/boards/articles/search/param?boardAdminId={id}(id=${boardAdminInfo.boardAdminId})}" th:text="#{common.btn.list}"></a>
+                                onclick ="saveBoard('put', 'normal')"
+                                th:text="#{common.btn.modify}">
+                        </button>
+                        <button class="point-fill" sec:authorize="hasAuthority('board.create')"
+                                th:if="(!${boardInfo?.boardId} and ${replyYn} == false)"
+                                onclick="saveBoard('post', 'normal')"
+                                th:text="#{common.btn.register}">
+                        </button>
+                        <a class="btn default-line"
+                           th:href="@{/boards/articles/search/param?boardAdminId={id}(id=${boardAdminInfo.boardAdminId})}" th:text="#{common.btn.list}"></a>
+                    </div>
                 </div>
             </form>
         </div>
@@ -126,7 +132,7 @@
                 restSubmit('get', '/rest/boards/'+this.value+'/view', '');
             });
 
-            OverlayScrollbars(document.querySelectorAll('.scroll-wrap'), {className: 'scrollbar'});
+            OverlayScrollbars(document.querySelector('.edit'), {className: 'scrollbar'});
         };
 
         function initTextEditor(flag) {
